--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -2,7 +2,7 @@
   {% unless page.name == '404.md' %}
     {% if page.title %}
       <li class='c-nav__item' role='presentation'>
-        <a class='c-nav__link' href='{{ page.url | prepend: site.baseurl }}'>{{ page.title }}</a>
+        <a class='c-nav__link' href='{{ page.url | relative_url }}'>{{ page.title }}</a>
       </li>
     {% endif %}
   {% endunless %}
